--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ input {
         //   scroll_percentage: threshold
         // });
         // Send Event and Log to Console
-        sendEvent("Scroll Depth Reached" {scroll_percentage: threshold})
+        sendEvent("Scroll Depth Reached", {scroll_percentage: threshold})
       }
     });
   }
