--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ input {
   }
   
   // Add scroll event listener
-  window.addEventListener(type: 'track',event , trackScrollDepth);
+  window.addEventListener("scroll", trackScrollDepth);
   </script>
 </body>
 </html>
