--- a/index.html
+++ b/index.html
@@ -396,9 +396,14 @@ input {
       }
     });
   }
-  
-  // Add scroll event listener
-  window.addEventListener("scroll", trackScrollDepth);
+  function debounce(func, wait) {
+  let timeout;
+  return function (...args) {
+    clearTimeout(timeout);
+    timeout = setTimeout(() => func.apply(this, args), wait);
+    };
+  }
+  window.addEventListener("scroll", debounce(trackScrollDepth, 200));
   </script>
 </body>
 </html>
