--- a/index.html
+++ b/index.html
@@ -396,14 +396,8 @@ input {
       }
     });
   }
-  function debounce(func, wait) {
-  let timeout;
-  return function (...args) {
-    clearTimeout(timeout);
-    timeout = setTimeout(() => func.apply(this, args), wait);
-    };
-  }
-  window.addEventListener("scroll", debounce(trackScrollDepth, 200));
+  // Add scroll event listener
+  window.addEventListener("scroll", trackScrollDepth);
   </script>
 </body>
 </html>
